--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
       <a-text
-        value="This content will always face you."
+        value="Hello"
         look-at="[gps-camera]"
-        scale="12 12 12"
+        scale="120 120 120"
         gps-entity-place="latitude: <-33.81610847407579>; longitude: <150.99390782842457>;"
       ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
